--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,4 +67,8 @@ dependencies = [
     "websockets==15.0.1",
     "xxhash==3.6.0",
     "zstandard==0.25.0",
+    "opentelemetry-api",
+    "opentelemetry-sdk",
+    "opentelemetry-exporter-otlp",
+    "opentelemetry-instrumentation",
 ]
