--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,16 @@ services:
       - "7687:7687"   # Bolt
     environment:
       - NEO4J_AUTH=neo4j/password
+      - NEO4J_server_config_strict__validation_enabled=false
+      - NEO4J_server_memory_heap_initial__size=2G
+      - NEO4J_server_memory_heap_max__size=4G
+      - NEO4J_server_memory_pagecache_size=4G
 
   tempo:
     image: grafana/tempo:latest
     command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
-      - ./tempo.yaml:/etc/tempo.yaml
+      - ./monitoring/tempo/tempo.yaml:/etc/tempo.yaml
     ports:
       - "14268:14268"  # jaeger ingest
       - "3200:3200"   # tempo
@@ -24,9 +28,9 @@ services:
   grafana:
     image: grafana/grafana:latest
     volumes:
-      - ./grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
-      - ./grafana-dashboard-provisioning.yaml:/etc/grafana/provisioning/dashboards/dashboards.yaml
-      - ./grafana-dashboard-span-metrics.json:/etc/grafana/provisioning/dashboards/span-metrics.json
+      - ./monitoring/grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./monitoring/grafana/dashboards-provisioning.yaml:/etc/grafana/provisioning/dashboards/dashboards.yaml
+      - ./monitoring/grafana/dashboards/span-metrics.json:/etc/grafana/provisioning/dashboards/span-metrics.json
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
@@ -41,6 +45,6 @@ services:
       - --web.enable-remote-write-receiver
       - --enable-feature=exemplar-storage
     volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+      - ./monitoring/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
     ports:
       - "9090:9090"
